# cpp-imsdk

./: CMakeLists.txt  Client.cpp  Client.h  ClientImpl.cpp  ClientImpl.h  Defines-Private.h  Defines.h  Makefile  ObjectMapper.cpp  ObjectMapper.h  Packet.cpp  Packet.h  README.md  Tcp.cpp  Tcp.h  Timer.h  Tool.cpp  Tool.h  build.sh  cmake_install.cmake  demo  main.cpp  privchat.cbp
android-build/: Android.mk  Application.mk
android-build/include/: Client.h  Defines.h
ios-build/: CMakeCache.txt  cmake_install.cmake  iOS-32.cmake  iOS-64.cmake
ios-build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel  install_postBuildPhase.makeDebug
ios-build/privchat.build/Debug-iphoneos/ZERO_CHECK.build/: Script-7AFD3C3409B4420EAA1D1C0A.sh  dgph
ios-build/privchat.build/Debug-iphoneos/privchat.build/: dgph
ios-build/privchat.build/Debug-iphonesimulator/ALL_BUILD.build/: dgph
ios-build/privchat.build/Debug-iphonesimulator/ZERO_CHECK.build/: dgph
ios-build/privchat.build/Debug-iphonesimulator/privchat.build/: dgph
ios-build/privchat.xcodeproj/: project.pbxproj
proto/: chat.authenticate.pb.cc  chat.authenticate.pb.h  chat.authenticate.proto  chat.base.pb.cc  chat.base.pb.h  chat.base.proto  chat.contacts.pb.cc  chat.contacts.pb.h  chat.contacts.proto  chat.message.pb.cc  chat.message.pb.h  chat.message.proto  chat.notification.pb.cc  chat.notification.pb.h  chat.notification.proto  chat.user.pb.cc  chat.user.pb.h  chat.user.proto
(+23 files in other folders)
